Added categories and brands button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,5 +5,7 @@
 
   <body>
     <p><a href="/instruments">Instruments</a></p>
+    <p><a href="/categories">Categories</a></p>
+    <p><a href="/brands">Brands</a></p>
   </body>
 </html>
